XMLExper/m12/m12_464_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘const char* tinyxml2::XMLElement::GetText() const’:
tinyxml2.cpp:1707:57: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLText*’ (conversion casts away constness)
 1707 |             /*PCI*/dynamic_cast<tinyxml2::XMLText*>(node) = node->NextSibling();
      |                                                         ^
diff: tinyxml2.S: No such file or directory
